# src/controllers/metric.controller.ts
@@ -19,3 +19,22 @@ export const processMetric = async (req: Request, res: Response, next: NextFunct
         next(err);
     }
 };
+
+export const getMetrics = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const metrics = await metricService.getMetrics();
+        return sendSuccess(res, { data: metrics, message: 'Metrics retrieved' });
+    } catch (err) {
+        next(err);
+    }
+};
+
+export const getMetricByName = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const { metricName } = req.params;
+        const metric = await metricService.getMetricByName(metricName);
+        return sendSuccess(res, { data: metric, message: 'Metric retrieved' });
+    } catch (err) {
+        next(err);
+    }
+};
