# src/routes/metric.routes.ts
@@ -1,6 +1,13 @@
 import { Router } from 'express';
 import * as metricController from '../controllers/metric.controller.js';
+import { validateMetricName } from '../middlewares/metric.validator.js';
 
 export const metricRoutes = Router();
 
-metricRoutes.post('/metrics/:metricName/process', metricController.processMetric);
+metricRoutes.get('/metrics', metricController.getMetrics);
+metricRoutes.get('/metrics/:metricName', validateMetricName, metricController.getMetricByName);
+metricRoutes.post(
+    '/metrics/:metricName/process',
+    validateMetricName,
+    metricController.processMetric,
+);
